<resources>
    <string name="app_name">SI PETUGAS</string>
    <string name="app_pref">Pengaturan</string>
    <string name="kecepatan_title">Kecepatan</string>
    <string name="penumpang_title">Penumpang</string>
    <string name="max_speed">Kecepatan Maksimum</string>
    <string name="average_speed">Kecepatan Rata-rata</string>
    <string name="distance">Jarak</string>
    <string name="time">Waktu</string>
    <string name="accuracy">Akurasi GPS</string>
    <string name="satellite">Satelit</string>
    <string name="jalan">Jalan</string>
    <string name="behenti">Berhenti</string>
    <string name="waiting_for_fix">Menunggu sambungan satelit …</string>
    <string name="gps_disabled">GPS tidak aktif</string>
    <string name="please_enable_gps">Untuk menggunakan aplikasi ini, harus mengaktifkan GPS</string>

    <string name="running">Bus dalam perjalanan</string>
    <string name="notification">Kecepatan Maksimum : %1$s, Jarak : %2$s</string>

    <string name="settings">Pengaturan</string>
    <string name="supirbus">Pemilihan supir dan bus</string>
    <string name="supirchoose">Pilih Supir</string>
    <string name="buschoose">Pilih Bus</string>
    <string name="app_info">Tentang Aplikasi</string>
    <string name="pref_auto_average">Deteksi otomatis saat berhenti</string>
    <string name="pref_auto_average_summary">Waktu ketika berhenti tidak akan dihitung dalam kecepatan rata-rata</string>
    <string name="pref_miles_per_hour">Menggunakan mil per jam</string>
    <string name="pref_miles_per_hour_summary">Menggunakan satuan mi/jam (jika nonakitif satuan menjadi km/jam)</string>

    <string name="license">License</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">Click in order to support my work :) …</string>
    <string name="source_code">GitHub</string>
    <string name="source_code_summary">Access to the source code.</string>
    <string name="version">Versi SI PETUGAS</string>

    <string name="noti_id" translatable="false">Speedmeterisanid</string>
    <string name="github" translatable="false">https://github.com/flyingrub/SpeedMeter</string>
    <string name="license_type" translatable="false">GNU General Public License 2</string>
    <string name="creator" translatable="false">Created by Bayu Agung Prakoso, Fridiana Dewi, and Arif Hidayat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="generic_no_internet_title">Sepertinya Internetmu Bermasalah</string>
    <string name="generic_no_internet_desc">Coba lagi ya nanti setelah internetmu telah tersambung</string>

    <string name="generic_http_error_title">Maaf Sepertinya Ada Sedikit Masalah Pada Server</string>
    <string name="generic_http_error_desc">Mohon coba lagi ya nanti</string>

    <string name="login_gagal_title">Email atau sandi salah!</string>
    <string name="login_gagal_desc">Silahkan coba lagi</string>

    <string name="error_login_expired">Sesi mu telah habis</string>
</resources>
