<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:materialdesign="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:background="#f7f7f7">



    <RelativeLayout
        android:id="@+id/toolbarSpeed"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:background="@color/blue_dark"
        android:elevation="3dp">

        <com.gc.materialdesign.views.ProgressBarCircularIndeterminate
            android:id="@+id/progressBarCircularIndeterminate"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:elevation="10dp" />

        <TextView
            android:id="@+id/judulKecepatan"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/currentSpeed"
            android:layout_width="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="60sp"
            android:layout_below="@id/judulKecepatan" />

    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:layout_below="@id/status">

        <com.ornach.nobobutton.NoboButton
            android:id="@+id/refresh"
            app:nb_text="Selesai"
            android:padding="10dp"
            app:nb_textSize="18sp"
            app:nb_borderColor="@color/blue_dark"
            app:nb_borderWidth="2dp"
            app:nb_backgroundColor="#fff"
            app:nb_focusColor="#79F2C0 "
            app:nb_textColor="@color/blue_dark"
            app:nb_radius="5dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="20dp"/>

        <com.ornach.nobobutton.NoboButton
            android:id="@+id/fab"
            app:nb_text="Jalan"
            android:padding="10dp"
            app:nb_textSize="18sp"
            app:nb_borderColor="#36B37E"
            app:nb_borderWidth="2dp"
            app:nb_backgroundColor="#fff"
            app:nb_focusColor="#79F2C0 "
            app:nb_textColor="#36B37E"
            app:nb_radius="5dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="20dp"/>


        <com.ornach.nobobutton.NoboButton
            android:id="@+id/darurat"
            app:nb_text="Darurat"
            android:padding="10dp"
            app:nb_textSize="18sp"
            app:nb_borderColor="@color/fbutton_color_alizarin"
            app:nb_borderWidth="2dp"
            app:nb_backgroundColor="#fff"
            app:nb_focusColor="@color/fbutton_color_midnight_blue"
            app:nb_textColor="@color/fbutton_color_alizarin"
            app:nb_radius="5dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp" />
    </LinearLayout>


    <TextView
        android:id="@+id/titleMaxSpeed"
        android:text="@string/max_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/toolbarSpeed"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/maxSpeed"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/toolbarSpeed"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp" />

    <View
        android:id="@+id/separator1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/grey_lighter"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/maxSpeed"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/titleAverageSpeed"
        android:text="@string/average_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/separator1"
        android:layout_marginTop="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/averageSpeed"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/separator1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp" />

    <View
        android:id="@+id/separator2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/grey_lighter"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/averageSpeed"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/titleDistance"
        android:text="@string/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/separator2"
        android:layout_marginTop="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/distance"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/separator2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp" />

    <View
        android:id="@+id/separator3"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/grey_lighter"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/distance"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/titleTime"
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/separator3"
        android:layout_marginTop="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />

    <Chronometer
        android:id="@+id/time"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/separator3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp" />

    <View
        android:id="@+id/separator4"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/grey_lighter"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/time"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/titleAccuracy"
        android:text="@string/accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/separator4"
        android:layout_marginTop="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/accuracy"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="@android:color/black"
        android:layout_alignTop="@+id/titleAccuracy"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignRight="@+id/separator5"
        android:layout_alignEnd="@+id/separator5" />

    <View
        android:id="@+id/separator5"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:background="@color/grey_lighter"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/separator4"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/titleSatellite"
        android:text="@string/satellite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/separator4"
        android:layout_toRightOf="@id/separator5"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/satellite"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="@android:color/black"
        android:layout_alignTop="@+id/titleSatellite"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"/>

    <View
        android:id="@+id/separator6"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/grey_lighter"
        android:elevation="1dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/satellite"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/status"
        android:text="@string/waiting_for_fix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="16dp"
        android:textColor="@color/grey_light"
        android:layout_below="@+id/separator6"
        android:layout_centerHorizontal="true" />

</RelativeLayout>